# metageniuses

./: .gitignore  CLAUDE.md  INDEX.md  LICENSE  LOG.md  PLAN.md  README.md  pyproject.toml  requirements.txt
backend/: app.py
configs/extraction/: default.json  metagene-cloud-prod.json  metagene-local-small.json  metagene-smoke-local.json  metagene1.json  tiny-test.json
data/curated_sequences/: forward_pass_summary.json
data/raw_sources/: human_microbiome_disease.csv  human_microbiome_multi-label.csv  human_microbiome_sex.csv  human_microbiome_source.csv
data/sae_model/: sae_config.json
docs/architecture/: residual_extraction.md  runpod_setup.md
docs/datasets/: data_sources.docx  forward_pass_dataset.md
experiment_plans/: 01_organism_detectors.md  07_layer_wise_probe_comparison.md  08_activation_pattern_classification.md  10_token_level_pathogen_localization.md  EXPERIMENTS.md
experiments/: cross_delivery.py  organism_detectors.py
future_experiments/: token_level_activations.md  virus_species_classifier.md
paper/: make_interprot_figures.py
src/metageniuses/: __init__.py
src/metageniuses/extraction/: __init__.py  cli.py  config.py  contracts.py  extractor.py  input_io.py  model_adapter.py  preprocess.py  schemas.py  storage.py
src/metageniuses/sae/: encode_features.py
tests/extraction/: test_contracts.py  test_pipeline_fake.py  test_preprocess.py  test_resume.py
tests/fixtures/: tiny_reads.jsonl
viz/: package-lock.json  package.json
viz/public/data/: experiment1.json  experiment3.json  (+10 more)
viz/src/: App.jsx  ExplorerView.jsx  LandingPage.jsx
(+9 files in other folders)
